# cmini

./: .gitignore  CMakeLists.txt  README.md  chat.py  input.c  main.c  model.c
models/: __init__.py  gemini.py  qwen.py
server/: verapi.py  vercel.py
src/: request.c
